BUG#36323 : The build-in backup/restore drivers should support cancel() API call

Patch changes default drivers to allow cancel operation in middle of
operation. Also allows for better cleanup in event of an error in the
driver.